[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
sha2 = { version = "0.8.1", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
lto=false
codegen-units = 1
debug=true
opt-level = "s"

[profile.dev]
panic = "abort"

