[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
rand={ version = "0.7.3", default-features = false}
merlin = {version = "2.0.0", default-features=false}
zeroize = {version = "1.1.1", default-features=false}

[target.'cfg(target_arch = "x86_64")'.dependencies]
getrandom = {version="0.1.14", default-features=false}

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features=["u32_backend"]

[dependencies.schnorrkel]
version = "0.9.1"
default-features = false
features=["u32_backend"]

[dev-dependencies]
hex-literal = "0.2.1"
hex = "0.4.2"
env_logger = "0.7.1"
log = "0.4.8"

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
lto=false
codegen-units = 1
debug=true
opt-level = "s"

[profile.dev]
panic = "abort"

